--- a/build.gradle
+++ b/build.gradle
@@ -4,25 +4,21 @@ version '1.0'
 apply plugin: 'java'
 apply plugin: 'war'
 
-def JERSEY_VERSION = '2.19'
 repositories {
     mavenLocal()
     mavenCentral()
 }
 
 dependencies {
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.16.0'
+    runtime group: 'javax.servlet', name: 'jstl', version: '1.2'
 
+    providedCompile group: 'javax.servlet', name: 'servlet-api', version: '2.5'
+    providedCompile group: 'org.hibernate', name: 'hibernate-core', version: '4.3.1.Final'
+    providedCompile group:'org.jboss.spec', name: 'jboss-javaee-7.0', version: '1.0.1.Final'
+    providedCompile 'org.jboss.resteasy:resteasy-jaxrs:3.0.11.Final'
+    providedCompile 'org.slf4j:slf4j-api:1.7.12'
 
-    compile group:'org.glassfish.jersey.containers', name: 'jersey-container-servlet', version:JERSEY_VERSION
-    compile group:'org.glassfish.jersey.containers', name: 'jersey-container-servlet-core', version:JERSEY_VERSION
-    compile group:'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version:JERSEY_VERSION
-
-    compile 'cglib:cglib:2.2.2'
-    compile 'org.mongodb:mongo-java-driver:2.11.1'
-    compile 'org.springframework.data:spring-data-mongodb:1.7.2.RELEASE'
-    compile 'org.projectlombok:lombok:1.16.4'
-    compile 'org.springframework:spring-core:4.2.0.RELEASE'
-
-
+    testCompile 'org.jboss.resteasy:resteasy-client:3.0.11.Final'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
